<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    >

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.Thelegendtrader.app.Activity.ui.Watchlist.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_orders"
        android:name="com.Thelegendtrader.app.Activity.ui.Orders.OrderListFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_order_list"/>

    <fragment
        android:id="@+id/nav_portfolio"
        android:name="com.Thelegendtrader.app.Activity.ui.Portfolio.PortfolioListFragment"
        android:label="@string/portfolio"
        tools:layout="@layout/fragment_portfolio_list"/>

    <fragment
        android:id="@+id/nav_Tools"
        android:name="com.Thelegendtrader.app.Activity.ui.Tools.ToolsListFragment"
        android:label="@string/tools"
        tools:layout="@layout/fragment_tools_list"/>

</navigation>