<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.ui.Portfolio.PositionsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llTop"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gray4"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/llSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTop"
            android:layout_marginLeft="12dp"
            android:elevation="1dp"
            android:layout_marginTop="-25dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/gtt_bg"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:drawableTint="@color/gray"
                android:hint="@string/no_holding"
                android:padding="12dp" />

            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="6/50"
                android:layout_weight="1.6"
                android:gravity="center"/>

            <View
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:background="@color/gray1"/>

            <ImageView
                android:id="@+id/ivVerify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:scaleType="centerInside"
                android:layout_weight="1.6"
                app:tint="@color/black"
                android:src="@drawable/filters"/>-->

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/llThird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llSecond"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/ic_baseline_search_24"
                app:tint="@color/blue" />

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/ivSearch"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/search"
                android:textColor="@color/blue"
                app:drawableTint="@color/blue" />

            <ImageView
                android:id="@+id/filter"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/tvSearch"
                android:src="@drawable/filters"
                app:tint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/filter"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/search"
                android:textColor="@color/blue"
                app:drawableTint="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/analytics"
                android:textColor="@color/blue"
                android:textSize="14sp"
                app:drawableTint="@color/blue" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/v1"
            android:layout_marginTop="3dp"
            android:layout_below="@+id/llThird"
            android:background="@color/gray"/>
        <!--<androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llThird"
            android:layout_marginTop="10dp"
            android:id="@+id/rvStockList"/>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:scaleType="centerInside"
                android:src="@drawable/three" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/no_position"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Place an order from your\nwatchlist" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>